<resources>
    <string name="app_name">ProgreSee</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exercise_text">Exercise text</string>
    <string name="exercise_status">Exercise status</string>
    <string name="owner_name">ownerName</string>
    <string name="classname">ClassName</string>
    <string name="number_of_open_tasks">Number of Tasks</string>
    <string name="full_name">FullName</string>
    <string name="email">Email</string>

    <string name="your_classrooms">Your classrooms:</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="welcome_to_progresee">Welcome to ProgreSee</string>
    <string name="facebook_login">Facebook login</string>
    <string name="google_login">Google Login</string>
    <string name="progresee_icon">ProgreSee Icon</string>
    <string name="task_title">Task Title</string>
    <string name="due_by">Due by: %1$s</string>
    <string name="user_profile">User profile</string>
    <string name="create_classroom_title">Create Classroom</string>
    <string name="classroom_description">Classroom Description</string>
    <string name="classroom_name">Classroom Name</string>
    <string name="progresee">ProgreSee</string>
    <string name="finished_users">Finished Users</string>

    <string name="number_of_tasks">Open tasks: %1$d </string>
    <string name="last_login_date">Last seen: %1$s</string>
    <string name="completed_on">Completed on: %1$s</string>
    <string name="number_of_exercises">Number of exercises: %1$d </string>
    <string name="task_desc_long_255">ZrrcYvrGgxakww8qHeDWdN3YC1OOEQimJd7zlObnCDkdwtpU3XjniOqGGU4fT91quvOtbzjIH9r7SuMbB0NgdKZ6FBHEzLGBp7X52gefZ7TS973leFJbUsmVXnGVZ8nYExsu27iQdnxLjsN2wDBhmIGrmfHP8T4jyweZ8wvI0V0EAcYnrRPmiFBltWcdMSZ9osdRCDGM0Ew8xX4PT5TmFW5Fvm0GfnOigcYL0mK2mjmqWflp0CNQHK9hJgeM7Bs</string>
    <string name="description">Description:</string>
    <string name="attached_image">Attached Image:</string>
    <string name="task_image">Task image</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="generated_classroom_invite_link">Generated classroom invite link:</string>
    <string name="save">Save</string>
    <string name="name_too_long">Name can not be longer than 60 characters</string>
    <string name="description_too_long">Description can not be longer than 100 characters</string>
    <string name="info">Info</string>
    <string name="edit_classroom">Edit classroom</string>
    <string name="delete_are_you_sure_classroom">Are you sure you want to delete this classroom? Deleting the classroom will also delete all the tasks within it.</string>
    <string name="delete_are_you_sure_task">Are you sure you want to delete this Task? Deleting the task will also delete all the exercises within it.</string>
    <string name="enter_user_email">Please enter the user\'s email</string>
    <string name="enter_exercise_description">Please enter exercise description</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="exit_app">Are you sure you want to exit the application?</string>
    <string name="name_cant_be_empty">Name can not be empty</string>
    <string name="description_cant_be_empty">Description can not be empty</string>
    <string name="unknown_sign_in_response">Unknown Response</string>
    <string name="unknown_error">Unknown error</string>
    <string name="sign_in_cancelled">Sign In cancelled</string>
    <string name="no_internet_connection">No Internet Found</string>
    <string name="signed_in">Signed In successfully</string>
    <string name="login">Login</string>
    <string name="please_wait">Please wait …</string>
    <string name="saving">Saving…</string>
    <string name="owner">Owner</string>
    <string name="add_user">Add user</string>
    <string name="user_added">User added…</string>
    <string name="leave_classroom">Leave classroom</string>
    <string name="transfer_ownership">Transfer ownership</string>
    <string name="remove_user">Remove user</string>
    <string name="dots">⋮</string>
    <string name="links">Resource Link: </string>
    <string name="create_task">Create Task</string>
    <string name="links_header">Links:</string>
    <string name="resource_link">Resource link</string>
    <string name="task_description_max_255_characters">Task description - max 255 characters</string>
    <string name="add_image">Add image</string>
    <string name="see_progress">See Progress</string>
    <string name="add_exercise">Add exercise</string>
    <string name="end_date">End date</string>
    <string name="current_end_date_string">Current end date: </string>
    <string name="current_date">%1$d/%2$d/%3$d</string>
    <string name="date_mock">00/00/0000</string>
    <string name="task_status_image">Task Status Image</string>
    <string name="please_pick_date">Please pick an End Date</string>
    <string name="edit_task">Edit Task</string>
    <string name="edit_exercise">New exercise description</string>
    <string name="delete_exercise">Delete Exercise</string>
    <string name="seanhed22_gmail_com">seanhed22@gmail.com</string>
    <string name="see_progresee">See ProgreSee</string>
    <string name="completed_list_title">Users Completed List</string>
    <string name="save_changes">Save Changes</string>
    <string name="update_exercises">Update exercises</string>
    <string name="update_exercises_status">Are you sure you want to update the status for %1$d exercises?</string>
    <string name="no_classrooms_available">No Classrooms Available</string>
    <string name="no_tasks_available">No Tasks Available</string>
    <string name="no_exercises_available">No Exercises Available</string>
    <string name="refresh">Refresh</string>
    <string name="no_user_has_completed_the_exercise_yet">No user has completed the exercise yet…</string>
    <string name="not_part_of_classroom_error">You are not part of any classroom :(</string>
    <string name="refreshing_string">Refreshing…</string>
    <string name="classroom_has_been_deleted_msg">The classroom has been deleted :(</string>
    <string name="exercise_updated">Exercise Updated</string>
    <string name="task_has_been_deleted_msg">Task has been deleted :(</string>
    <string name="exercise_added">Exercise added</string>
    <string name="network_error">Network error :S</string>
    <string name="failed_to_save_classroom">The system has failed to save the classroom...</string>
    <string name="failed_to_save_task">The system has failed to save the Task</string>
    <string name="no_users_finished">No users finished the exercise yet...</string>
    <string name="failed_to_complete_action">Failed to complete the requested action</string>
    <string name="no_user_in_system">No user with such email in the system</string>


</resources>
