<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit_task_menu_item"
        android:icon="@drawable/ic_edit_24px"
        android:title="@string/edit"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/delete_task_menu_item"
        android:icon="@drawable/ic_delete_24px"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_exercise_menu_item"
        android:icon="@drawable/ic_note_add_24px"
        android:title="@string/add_exercise"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/see_progress_menu_item"
        android:icon="@drawable/ic_remove_red_eye_24px"
        android:title="@string/see_progress"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>