<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="task"
            type="com.example.progresee.beans.Task" />

        <variable
            name="createClassroomViewModel"
            type="com.example.progresee.viewmodels.CreateTaskViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.CreateTaskFragment">

        <include
            android:id="@+id/layout_progress_bar"
            layout="@layout/progress_bar_layout"
            android:layout_width="76dp"
            android:layout_height="13dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/create_task_title"
            android:layout_width="276dp"
            android:layout_height="37dp"
            android:gravity="center"
            android:text="@string/create_task"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.064" />

        <!--    <DatePicker-->
        <!--        android:id="@+id/end_date"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        tools:layout_editor_absoluteX="30dp"-->
        <!--        tools:layout_editor_absoluteY="55dp" />-->


        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/task_title"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_task_title"
            app:layout_constraintVertical_bias="0.005" />

        <EditText
            android:id="@+id/edit_text_description"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/task_description_max_255_characters"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_title"
            app:layout_constraintVertical_bias="0.0" />

        <EditText

            android:id="@+id/add_link"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/resource_link"
            android:importantForAutofill="no"
            android:inputType="textUri"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_description"
            app:layout_constraintVertical_bias="0.035" />

        <TextView
            android:id="@+id/current_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="104dp"
            android:text="@string/date"
            app:layout_constraintBottom_toTopOf="@+id/save_task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pick_date" />

        <Button
            android:id="@+id/pick_date"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginBottom="244dp"
            android:onClick="@{()->createClassroomViewModel.onPressedDatePick()}"
            android:text="@string/end_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/save_task"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>