<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="logViewModel"
                type="com.example.progresee.viewmodels.LoginViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#03A9F4"
            tools:context=".views.LoginFragment">


        <ImageView
                android:id="@+id/progresee_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:src="@drawable/ic_progresee_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:contentDescription="@string/progresee_icon" />

        <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="8dp"
                android:text="@string/welcome_to_progresee"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progresee_icon"
                app:layout_constraintVertical_bias="0.0" />

        <TextView
                android:id="@+id/messages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="5sp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.9"
                tools:text="By signing in you agree to our Terms and Conditions &amp; Privacy Policy " />

        <ImageView
                android:id="@+id/facebook_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{()->logViewModel.navigate()}"
                android:src="@drawable/btn_facebook"
                app:layout_constraintBottom_toTopOf="@+id/messages"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome"
                app:layout_constraintVertical_bias="0.0"
                android:contentDescription="@string/facebook_login" />

        <ImageView
                android:id="@+id/google_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{()->logViewModel.navigate()}"
                android:src="@drawable/btn_google"
                app:layout_constraintBottom_toTopOf="@+id/messages"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/facebook_button"
                app:layout_constraintVertical_bias="0.0"
                android:contentDescription="@string/google_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>