<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="classroom"
            type="com.example.progresee.beans.Classroom" />

        <variable
            name="createClassroomViewModel"
            type="com.example.progresee.viewmodels.CreateClassroomViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.CreateClassroomFragment">

        <TextView
            android:id="@+id/createClassroomTitle"
            android:layout_width="276dp"
            android:layout_height="37dp"
            android:layout_marginTop="32dp"
            android:text="@string/create_classroom_title"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editText_classroom_name"
            android:layout_width="219dp"
            android:layout_height="47dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/classroom_name"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:singleLine="true"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createClassroomTitle"
            app:layout_constraintVertical_bias="0.0" />


        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="@{()->createClassroomViewModel.onSavePressed(editTextClassroomName.getText().toString())}"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_classroom_name"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/generated_link_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/generated_classroom_invite_link"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_button"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/generated_link"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape"
            android:text="@string/generated_classroom_invite_link"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generated_link_text"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>